--- a/.github/workflows/chisel.yml
+++ b/.github/workflows/chisel.yml
@@ -15,7 +15,7 @@ permissions:
   contents: read
 
 jobs:
-  generate_verilog:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -29,17 +29,5 @@ jobs:
       - name: Run Nix Cache
         uses: DeterminateSystems/magic-nix-cache-action@v2
 
-      # - name: Source Dev Shell
-      #   run: nix --extra-experimental-features nix-command --extra-experimental-features flakes develop --ignore-environment -c $SHELL
-
-      # - name: Install firtool
-      #   run: nix-env -iA nixpkgs.firtool
-
-      # - name: DEBUG STEP
-      #   run: echo $PATH; which firtool
-
-      # - uses: nicknovitski/nix-develop@1
-      # - run: echo $PATH
-
-      - name: Run
-        run: nix develop --command sbt run
+      - name: Test
+        run: nix develop --command sbt test
